# diderot

./: .gitignore  INSTALL.md  LICENSE  Makefile.in  README.md  configure.ac
config/: acx_pthread.m4  ax_ext.m4  ax_gcc_func_attribute.m4  check_smlnj.m4  check_smlnj_heap_suffix.m4  config.guess  config.sub  expand-utf8.c  install-sml-wrapper_sh.in
doc/: Makefile.in  README.md
doc/man/: diderot-api.5.txt  diderotc.1.txt
doc/report/: report.tex
doc/src/: Makefile.in
doc/src/common/: defs.tex
doc/src/implementation/: data-layout.md  diderot-bsp.graffle  dnorm-format.txt  json-api.txt  life-of-a-strand.md  strand-arrays.md
doc/src/man/: Makefile.in  diderot-api.5.adoc
doc/src/manual/: manual.tex
doc/src/report/: intro.tex  report.tex
mk/: clean-rules.gmk
src/compiler/: Makefile.in  Makefile_mlton.in
src/compiler/ast/: ast-pp.sml  ast.sml  const-expr.sml  meta-var.sml  sources.cm  sources.mlb  type-of.sml  type-util.sml  types.sml  var.sml
src/compiler/basis/: basis-names.sml  basis-vars.sml  basis.sml  dump-basis.sml  math-fns.sml  sources.cm  sources.mlb
src/compiler/cfg-ir/: avail-rhs-fn.sml  census-fn.sml  check-ir-fn.sml  dom-tree-fn.sml  domain-sig.sml  exit-kind.sml  expr-fn.sml  forward-dfa-fn.sml  global-var-kind.sml  operators-sig.sml  promote-fn.sml  rewrite-fn.sml  sources.cm  sources.mlb  ssa-fn.sml  ssa-pp-fn.sml  ssa-sig.sml  ssa-types-sig.sml  translate-env-fn.sml  translate-fn.sml  unused-elim-fn.sml  value-numbering-fn.sml
src/compiler/codegen/: README.md  clang.sml  code-output.sml  codegen-env.sml  codegen-sig.sml  codegen-util.sml  collect-info.sml  gen-library-interface.sml  gen-library-json.sml  global-struct.sml  json-util.sml  output-util.sml  print-as-c.sml  pseudo-vars.sml  sources.cm  sources.mlb  string-subst.sml  target-spec.sml
src/compiler/common/: api-types.sml  border-ctl.sml  create.sml  error.sml  int-lit.sml  kernel.sml  literal.sml  log.sml  paths.sml  paths_sml.in  phase-timer.sml  properties.sml  rational.sml  raw-types.sml  real-lit.sml  reductions.sml  size-of.sml  size-of_sml.in  sources.cm  sources.mlb  stamp.sml  stats.sml  strand-sets.sml  strand-util.sml  timers.sml
src/compiler/cxx-util/: cxx-names.sml  fragments.sml  gen-inputs-util.sml  gen-outputs-util.sml  gen-tys-and-ops.sml  print-as-cxx.sml  run-cc.sml  sources.cm  sources.mlb  tree-to-cxx.sml  type-to-cxx.sml
src/compiler/driver/: about.sml  main.sml  mlton-main.sml  sources.cm  sources.mlb  targets.sml
src/compiler/ein/: deriv-ein.sml  ein-filter.sml  ein-pp.sml  ein-sums.sml  ein-util.sml  ein.sml  mk-operators.sml  sources.cm  sources.mlb
src/compiler/fields/: field-def.sml  image-info.sml  index-ctl.sml  sources.cm  sources.mlb  tensor-shape.sml
src/compiler/global-env/: global-env.sml  sources.cm  sources.mlb  strand-env.sml
src/compiler/high-ir/: check-high.sml  high-ir.sml  high-types.sml  sources.cm  sources.mlb
src/compiler/high-opt/: apply.sml  derivative.sml  eps-util.sml  high-opt.sml  normalize-ein.sml  normalize.sml  reorder.sml  sources.cm  sources.mlb
src/compiler/high-to-mid/: avail-rhs.sml  clean-index.sml  clean-params.sml  coord-space-transform.sml  float-ein.sml  handle-ein.sml  helper.sml  high-to-mid.sml  poly-ein-step2.sml  poly-ein-step3.sml  poly-ein.sml  probe-ein.sml  sources.cm  sources.mlb  translate-cfexp.sml  translate-ofield.sml
src/compiler/inputs/: inputs.sml  sources.cm  sources.mlb
src/compiler/low-ir/: check-low.sml  low-ir.sml  low-types.sml  sources.cm  sources.mlb
src/compiler/low-opt/: low-contract.sml  low-opt.sml  sources.cm  sources.mlb
src/compiler/low-to-tree/: assign-types.sml  env.sml  flatten.sml  low-to-tree.sml  scope-vars.sml  sources.cm  sources.mlb  unify-vars.sml  util.sml
src/compiler/mid-ir/: check-mid.sml  mid-ir.sml  mid-types.sml  sources.cm  sources.mlb
src/compiler/mid-opt/: border-ctl.sml  dom-tree.sml  mid-contract.sml  mid-opt.sml  sources.cm  sources.mlb
src/compiler/mid-to-low/: avail-rhs.sml  ein-to-low.sml  ein-to-scalar.sml  ein-to-vector.sml  eval-kern.sml  field-to-low.sml  load-voxels.sml  mid-to-low.sml  mk-low-ir.sml  sources.cm  sources.mlb
src/compiler/mlton/: README.md  fn.sml  list-pair.sml  list.sml  option.sml  sources.mlb  string.sml
src/compiler/nrrd/: nrrd-enums.sml  nrrd-info.sml  run-dnorm_sml.in  sources.cm  sources.mlb
src/compiler/options/: cmd-line-constants.sml  ctl.sml  options.sml  sources.cm  sources.mlb  target-options.sml  version_sml.in
src/compiler/parse-tree/: operators.sml  parse-tree-pp.sml  parse-tree.sml  sources.cm  sources.mlb
src/compiler/parser/: diderot-1.0.grm  diderot-1.0.lex  diderot.grm  diderot.lex  keywords-1.0.sml  keywords.sml  parser.sml  sources.cm  sources.mlb
src/compiler/simple/: check-simple.sml  simple-func.sml  simple-pp.sml  simple-types.sml  simple-var.sml  simple.sml  sources.cm  sources.mlb
src/compiler/simple-opt/: check-for-bsp.sml  inliner.sml  map-reduce-opt.sml  simple-contract.sml  simple-opt.sml  simplify-fields.sml  simplify-vars.sml  sources.cm  sources.mlb
src/compiler/simplify/: dead-code.sml  simplify.sml  sources.cm  sources.mlb  util.sml
src/compiler/target-cpu/: README.md  gen-debugger-hooks.sml  gen-global-update.sml  gen-globals.sml  gen-inputs.sml  gen-outputs.sml  gen-strand.sml  gen-tys-and-ops.sml  gen-util.sml  gen-world.sml  gen.sml  sources.cm  sources.mlb  target-cpu.sml
src/compiler/target-cuda/: gen-global-update.sml  gen-globals.sml  gen-strand.sml  gen-tys-and-ops.sml  gen-world.sml  gen.sml  print-as-cuda.sml  run-cc.sml  sources.cm  sources.mlb  target-cuda.sml
src/compiler/translate/: analyze-simple.sml  sources.cm  sources.mlb  translate-basis.sml  translate-ty.sml  translate.sml
src/compiler/tree-ir/: check-tree.sml  sources.cm  sources.mlb  tree-func.sml  tree-global-var.sml  tree-ir.sml  tree-ops.sml  tree-pp.sml  tree-state-var.sml  tree-type-of.sml  tree-types.sml  tree-var.sml  vector-layout.sml
src/compiler/tree-opt/: sources.cm  sources.mlb  tree-contract.sml  tree-opt.sml
src/compiler/typechecker/: check-const.sml  env.sml  (+15 more)
(+95 files in other folders)
